Fixed pagination not showing on mobile in battle history

--- a/src/pages/BattleHistory/styles.scss
+++ b/src/pages/BattleHistory/styles.scss
@@ -4,7 +4,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    min-width: 744px;
     max-width: 900px;
     min-height: 100vh;
     height: 100%;
@@ -13,6 +12,7 @@
 
     @media screen and (max-width: 900px) {
         padding: 0;
+        min-width: 95vw;
     }
 
     .back-button {
